envoy.yaml
static_resources:
  listeners:
    - name: hello_envoy
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: hello_envoy
                  virtual_hosts:
                    - name: hello_envoy_main
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /
                          direct_response:
                            body:
                              inline_string: '{"message":"hello"}'
                            status: 200
                stat_prefix: hello_envoy
